--- a/public/files/projects.json
+++ b/public/files/projects.json
@@ -3,7 +3,7 @@
     "id": 1,
     "date": "Ongoing (August 2025)",
     "title": "This website",
-    "description": "The website you are currently viewing was created using Vue.js and Tailwind CSS.  It is still being updated.",
+    "description": "The website you are currently viewing was created using Vue.js and Tailwind CSS.  I also implemented auto-deployment from my GitHub account using a YAML script. It is still being updated.",
     "link": "https://github.com/retupmoc258/retupmoc258.github.io",
     "download": false,
     "tags": ["Vue", "Tailwind CSS", "JavaScript", "HTML", "CSS", "IntelliJ IDEA"]
@@ -24,7 +24,7 @@
     "description": "I created an API endpoint that would accept a contact form submission and send an email to the person who filled out the form and the company hosting the website. This project uses Express with Node.js and a Mailgun module to send the email. This project was developed for a company I contract for, so the code is private, but I\"m happy to discuss the project with you.",
     "link": "",
     "download": false,
-    "tags": ["Express", "Node.js", "Mailgun", "Api", "JOI", "IntelliJ IDEA"]
+    "tags": ["Express", "Node.js", "Mailgun", "Api", "IntelliJ IDEA"]
   },
   {
     "id": 101,
@@ -60,7 +60,7 @@
     "description": "This project was to create a user interface design that would be friendly for a user. This project was designed for a mobile device, and the age will simulate the view on a mobile device. I created the interface, but I did not program the HTML elements.  This project uses Justinmind.",
     "link": "taniti/index.html",
     "download": false,
-    "tags": ["Justinmind", "Design"]
+    "tags": ["UI/UX"]
   },
   {
     "id": 104,
